updating code