@@ -1,16 +1,41 @@
-## Stage 1 : build with maven builder image with native capabilities
-FROM quay.io/quarkus/centos-quarkus-maven:21.3.2-java11 AS build
-RUN mkdir -p /tmp/todo-demo-app
-ADD . /tmp/todo-demo-app
-USER root
-RUN chown -R quarkus /tmp/todo-demo-app
-USER quarkus
-RUN  ls  /tmp/todo-demo-app/pom.xml && mvn -f /tmp/todo-demo-app/pom.xml -Pnative clean package
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.10 AS build
 
-## Stage 2 : create the docker final image
-FROM registry.access.redhat.com/ubi8/ubi-minimal
-WORKDIR /usr/src/app/target/
-COPY --from=build /tmp/todo-demo-app/target/*-runner /usr/src/app/target/application
-RUN chmod 775 /usr/src/app/target
+WORKDIR /home/jboss
+
+COPY pom.xml ./
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean compile package -DskipTests
+
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
+
+ARG JAVA_PACKAGE=java-11-openjdk-headless
+ARG RUN_JAVA_VERSION=1.3.8
+ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
+# Install java, maven, and the run-java script
+# Also set up permissions for user `1001`
+RUN microdnf install curl ca-certificates ${JAVA_PACKAGE} \
+    && microdnf update \
+    && microdnf clean all \
+    && mkdir /deployments \
+    && chown 1001 /deployments \
+    && chmod "g+rwX" /deployments \
+    && chown 1001:root /deployments \
+    && curl https://repo1.maven.org/maven2/io/fabric8/run-java-sh/${RUN_JAVA_VERSION}/run-java-sh-${RUN_JAVA_VERSION}-sh.sh -o /deployments/run-java.sh \
+    && chown 1001 /deployments/run-java.sh \
+    && chmod 555 /deployments/run-java.sh \
+    && echo "securerandom.source=file:/dev/urandom" >> /etc/alternatives/jre/conf/security/java.security
+
+# Configure the JAVA_OPTIONS, you can add -XshowSettings:vm to also display the heap size.
+ENV JAVA_OPTIONS="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
+# We make four distinct layers so if there are application changes the library layers can be re-used
+
+COPY --from=build --chown=1001 /home/jboss/target/quarkus-app/lib/ /deployments/lib/
+COPY --from=build --chown=1001 /home/jboss/target/quarkus-app/*.jar /deployments/
+COPY --from=build --chown=1001 /home/jboss/target/quarkus-app/app/ /deployments/app/
+COPY --from=build --chown=1001 /home/jboss/target/quarkus-app/quarkus/ /deployments/quarkus/
+
 EXPOSE 8080
-CMD ["./application", "-XX:+PrintGC", "-XX:+PrintGCTimeStamps", "-XX:+VerboseGC", "+XX:+PrintHeapShape", "-Xmx128m", "-Dquarkus.http.host=0.0.0.0"]
+USER 1001
+
+ENTRYPOINT [ "/deployments/run-java.sh" ]
